# rust-actix-diesel

./: Cargo.toml  README.md  todo.md
migrations/2023-06-27-211613_first_schema/: down.sql  up.sql
src/: auth.rs  db_actions.rs  guards.rs  main.rs  models.rs  schema.rs
src/ultils/: utils.rs
static/: index.html  login.html  signup.html
