[package]
name = "actix-diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { version = "0.1.30", features = ["log"] }
env_logger = "0.10"
actix-hash = {version = "0.5.0", features = ["blake2"]}
actix-service = "2"
actix-utils = "3"
async-trait = "0.1"
# redis-actor-session
actix = { version = "0.13", default-features = false, optional = true }
actix-redis = { version = "0.12", optional = true }
futures-core = { version = "0.3.7", default-features = false, optional = true }

# redis-rs-session
redis = { version = "0.22", default-features = false, features = ["tokio-comp", "connection-manager"], optional = true }
actix-session = {version = "0.7.2", features = ["cookie-session"]}
actix-web = "4.3.1"
cookie = "0.17.0"
diesel = { version = "2.1.0", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
bcrypt = "0.14.0"
